# vdb_center

./: .dockerignore  .env.server.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.server.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: docker-image.yml
examples/: 111.py
scripts/: clear.sh  deploy_server.sh  run_vdb.sh
src/: main.py
src/conf/: env.py
src/db/: database.py  mapper.py  models.py
src/model/: kb_model.py  project_model.py
src/router/: kb.py  project.py
src/service/: kb_service.py  project_service.py
src/tests/: test_project_router.py
src/utils/: embedding_api.py  file_loader.py  text_sanitizer.py
